# melange-checkers

./: README.md
Uninitialized-CXXField-Checker/: CMakeLists.txt  UseDefChecker.cpp
checker-code/: CMakeLists.txt  Myfirstchecker.cpp  UseDefChecker.cpp
demo/: Makefile  demo.c  demo.sh
src/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  PHPTaintChecker.cpp  PHPTaintChecker.h  Registry.cpp  StrCpyOverflowChecker.cpp  StrCpyOverflowChecker.h  TypeCastingVulnChecker.cpp  TypeCastingVulnChecker.h  TypeConfusionChecker.cpp  TypeConfusionChecker.h  UseDefChecker.cpp  UseDefChecker.h
tests/: README.md
tests/phpchecker-tests/: test-sancall.c  test-unsanstr.c  test_harness.py  testmacro.h
tests/phpchecker-tests/expects/: test-sancall.c.exp  test-unsanstr.c.exp
tests/strcpy-overflow/: strcpy-stack-overflow.c  test_harness.py
tests/typecast-bugs/: calloc-implicit.c  calloc-int-unsigned.c  malloc-implicit.c  malloc-int-unsigned.c  memcpy-implicit.c  memcpy-int-unsigned.c  memmove-implicit.c  memmove-int-unsigned.c  memset-implicit.c  memset-int-unsigned.c  rangetest.c  realloc-implicit.c  realloc-int-unsigned.c  reallocarray-int-unsigned.c  strncpy-implicit.c  strncpy-int-unsigned.c  test_harness.py
tests/typecast-bugs/expects/: rangetest.c.exp  (+15 more)
tests/typeconfusion/: char-to-int-declstmt.c  char-to-int.c  char-void-int-declstmt.c  char-void-int.c  test_harness.py
tests/uninitialized-var/: fail-cxx-calls-across-object-definitions.cpp  fail-cxx-constructor-not-defined.cpp  fail-cxx-instantiated-object-var-passed-by-ref.cpp  fail-cxx-struct-field-uninitialized.cpp  fail-cxx-two-constructors.cpp  fail-cxx-unary-lnot-operator.cpp  fail-cxx-uninitialized-var-passed-by-ref.cpp  fail-cxx-uninstantiated-object-function-call.cpp  fail-cxx-uninstantiated-object-uninitialized-field.cpp  pass-cxx-exercise-buggy-paths.cpp  pass-cxx-functionbody-available-var-passed-by-ref.cpp  pass-cxx-instantiated-object-uninitialized-field-pass-by-value.cpp
(+11 files in other folders)
